# aws-strands-agents-demo

./: .gitignore  README.md  pyproject.toml
local/: ex_00_hello_world.py  ex_01_default_tools.py  ex_01_select_model.py  ex_02_mcp_local_general.py  ex_02_single_default_tool.py  ex_03_mcp_local_custom.py  ex_03_multiple_default_tools.py  ex_04_custom_tool.py  ex_05_mcp_local_generic.py  ex_06_mcp_local_custom.py  ex_07_guardrails.py  ex_07_observability_otel.py  ex_08_apis.py  ex_09_observability_otel.py  main.py
otel-instructions/: docker-compose.yml  otel-collector-config.yml
