[tool.poetry]
name = "aws-strands-agents-demo"
version = "0.0.1"
description = "Cool AWS Strands Agents with GenAI, Bedrock and MCPs"
authors = ["Santiago Garcia Arango <san99tiago@gmail.com>"]
license = "Apache"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aws-cdk-lib = "2.118.0"
constructs = ">=10.0.0,<11.0.0"
strands-agents = {extras = ["otel"], version = "^1.0.1"}
strands-agents-tools = "^0.2.1"
strands-agents-builder = "^0.1.4"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.24.0"
pytest = "^7.4.4"
pytest-mock = "^3.12.0"
coverage = "^7.4.0"
black = "^23.12.1"
boto3 = "^1.34.14"
moto = "^4.2.13"
aws-lambda-powertools = { version = "^2.31.0" }
python-ulid = "^2.2.0"

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["backend", "cdk"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
black-format = "black ."
black-check = "black . --check --diff -v"
test-unit = ["_test_unit", "_coverage_report", "_coverage_html"]
synth = "cdk synth"
deploy-backend-dev = "cdk deploy investments-portfolio-tracker-backend-dev --require-approval never"
_test_unit = "coverage run -m pytest tests/unit"
_coverage_report = "coverage report"
_coverage_html = "coverage html"

[tool.coverage.run]
branch = true
source = ["backend", "cdk"]
omit = ["**/__init__.py", "cdk/app.py"]

[tool.coverage.report]
show_missing = false
